# SiMinL_Week8

./: Cargo.toml  Makefile  README.md  gradstudentsDB.db  query_log.md
.github/workflows/: CI.yml
src/: lib.rs  main.rs
tests/: test_fn.rs
