[package]
name = "lucy_sql"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
rusqlite = "^0.29"
assert_cmd = "^2.0"
predicates = "0.9"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }